...
        child: ListView(
          children: [
            ListTile(
              onTap: () {
                logout(context);
              },
              title: const Text("Sair"),
              leading: const Icon(Icons.logout),
            )
          ],
        ),
      ),
      body: (userId != null && userToken != null)
...
