...
                  ),
                ),
                actions: [
                  Consumer<Clients>(
                    builder: (BuildContext context, Clients list, Widget? widget) {
                      return TextButton(
                        child: const Text("Salvar"),
                        onPressed: () async {
                          list.add(Client(name: nomeInput.text, email: emailInput.text, type: dropdownValue));
                          Navigator.pop(context);
                        }
                      );
                  }),
...
